Commit changes for Command side
Change-Id: Ie84adf810804e22ff783660a5606eda87e684733

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9000
 #Added for OpenAPI 3.0 specification
 openapi.project.title=Skill Tracker
 openapi.project-version=1.0
@@ -7,16 +8,18 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 
 #MySql DB Configuraton details
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://localhost:3306/skill_tracker
 spring.datasource.username=root
 spring.datasource.password=pass@word1
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 #RabbitMQ Configuration details
 spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
+spring.rabbitmq.port=15672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-spring.rabbitmq.queueName=user.queue
-spring.rabbitmq.exchangeName=user.exchange
+spring.rabbitmq.queue=user.queue
+spring.rabbitmq.exchange=user.exchange
 spring.rabbitmq.routingKey=user.routingkey
