Added OpenAPI specification
Change-Id: If032ff2307714f7b6ff5b96a8e50c2b9fad5eba7

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+server.servlet.context-path=/skill-tracker/api/v1
 server.port=9000
 #Added for OpenAPI 3.0 specification
 openapi.project.title=Skill Tracker
 openapi.project-version=1.0
-openapi.project-description=Skill Tracker API
+openapi.project-description=Skill Tracker Command API
 springdoc.use-fqn=false
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
