--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.servlet.context-path=/skill-tracker/api/v1
 server.port=9000
+spring.application.name=command-side-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #Added for OpenAPI 3.0 specification
 openapi.project.title=Skill Tracker
 openapi.project-version=1.0
@@ -14,6 +16,7 @@ spring.datasource.username=root
 spring.datasource.password=pass@word1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.show-sql=true
 
 
 #RabbitMQ Configuration details
