--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,17 +11,21 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/api-docs
 
 #MySql DB Configuraton details
-spring.datasource.url=jdbc:mysql://localhost:3306/skill_tracker
+# For localhost use this property
+spring.datasource.url=jdbc:mysql://localhost:3306/skill_tracker?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+# For docker use this property
+#spring.datasource.url=jdbc:mysql://mysqldb/skill_tracker?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass@word1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.sql.init.mode=always
 #spring.jpa.show-sql=true
 
 
 #RabbitMQ Configuration details
 spring.rabbitmq.host=localhost
-spring.rabbitmq.port=15672
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.queue=user.queue
