--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,10 +24,20 @@ spring.sql.init.mode=always
 
 
 #RabbitMQ Configuration details
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+##Local Configuration##
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+
+##AWS specific configuration##
+spring.rabbitmq.host=b-37c4edf1-b06f-49e8-9015-9ae8f912a628.mq.ap-south-1.amazonaws.com
+spring.rabbitmq.port=5671
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=FiservHackFSE
+#spring.rabbitmq.ssl.enabled=true
+#spring.rabbitmq.ssl.algorithm=TLSv1.2
+
 spring.rabbitmq.queue=user.queue
 spring.rabbitmq.exchange=user.exchange
 spring.rabbitmq.routingKey=user.routingkey
